--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -6,8 +6,9 @@ nav{
     z-index: 10;
 }
 .header{
-    position: relative;
+    position: sticky;
     z-index: 900;
+    top: 0;
 }
 /*Styling logo*/
 .logo{
